# ChangeLog for net-news/rawdog
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/rawdog/ChangeLog,v 1.21 2008/05/13 18:52:04 hawking Exp $

*rawdog-2.11 (13 May 2008)

  13 May 2008; Ali Polatel <hawking@gentoo.org>
  +files/rawdog-2.11-system-feedparser.patch, +rawdog-2.11.ebuild:
  Version bump. Added patch to use system feedparser. Dropped hppa and s390
  keywords due to feedparser lacking those keywords.

  17 Apr 2008; Jeroen Roovers <jer@gentoo.org> rawdog-2.10.ebuild:
  Stable for HPPA (bug #206091).

  17 Feb 2008; Christoph Mende <angelos@gentoo.org> rawdog-2.10.ebuild:
  Stable on amd64, bug #206091

  17 Feb 2008; Raúl Porcel <armin76@gentoo.org> rawdog-2.10.ebuild:
  alpha/ia64/sparc stable wrt #206091

  16 Feb 2008; Markus Meier <maekke@gentoo.org> rawdog-2.10.ebuild:
  x86 stable, bug #206091

  15 Feb 2008; nixnut <nixnut@gentoo.org> rawdog-2.10.ebuild:
  Stable on ppc wrt bug 206091

  04 Mar 2007; Lukasz Strzygowski <lucass@gentoo.org> rawdog-2.6.ebuild,
  -rawdog-2.7.ebuild, -rawdog-2.9.ebuild, rawdog-2.10.ebuild:
  Replaced einfo with elog in pkg_postinst in 2.6. Dropped 2.7 and 2.9. Added
  NEED_PYTHON to 2.10.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*rawdog-2.10 (07 Sep 2006)

  07 Sep 2006; Lukasz Strzygowski <lucass@gentoo.org> +rawdog-2.10.ebuild:
  Version bump.

*rawdog-2.9 (21 Jun 2006)

  21 Jun 2006; Lukasz Strzygowski <lucass@gentoo.org> -rawdog-1.12.ebuild,
  -rawdog-2.4.ebuild, +rawdog-2.9.ebuild:
  Version bump, removed info about upgrading from 1.x, removed older versions.

  02 May 2006; Jason Wever <weeve@gentoo.org> rawdog-2.6.ebuild:
  Stable on SPARC.

  10 Mar 2006; Aron Griffis <agriffis@gentoo.org> rawdog-2.6.ebuild:
  Mark 2.6 stable on ia64

*rawdog-2.7 (07 Mar 2006)

  07 Mar 2006; Lukasz Strzygowski <lucass@gentoo.org> metadata.xml,
  +rawdog-2.7.ebuild: