@@ -6,14 +6,14 @@ DIST rawdog-2.10.tar.gz 89961 RMD160 d7efa9a34db3e6ef14a9a383b286d170b7a9064c SH
 DIST rawdog-2.11.tar.gz 103118 RMD160 fe59cef0a9b4a417bd772b0cd29a5b6fc001f2eb SHA1 c77da97d84b87a71bf1dec06ac3b77438d1174cd SHA256 93aa23fdc7c44de6d5492e8b7f758621cdbd7b61a9e89df303b34c7c62826b1f
 DIST rawdog-2.6.tar.gz 84625 RMD160 90f3b223ce9e885c60a494ea0d4ab68902987d8c SHA1 35d1ed0dd90050c7df864569a80d8ebd0307f8af SHA256 b845355cbcab48aa12e48de3a71e421b53f0015c7bd1875c346021094162e03e
 EBUILD rawdog-2.10.ebuild 531 RMD160 76cf020fbb4de341c00c9e4a4529937a2b6a3c3a SHA1 439fa77ed508e2eb10edfde3c207fb634c870a89 SHA256 243de70a18c65423e0a50620ca383418a5702b5b78953be05012c57bfc1c010c
-EBUILD rawdog-2.11.ebuild 795 RMD160 ffd03d714ef1c8a05945080bb650eee348fc18cc SHA1 8decc2fb428e05f028e8b3abf8fa487e0bff6b99 SHA256 2f88d98405aa17f73bfb9745a803874d4efe24767713d891859fbaffa3e98db8
+EBUILD rawdog-2.11.ebuild 592 RMD160 b0afc05e36e47d9c670921fb9959da797610f7ff SHA1 a63b0f0205f1abdf5c7c3e18b1e2c78d6da719a2 SHA256 9920aeea66d8c700ea04c42c138c18e0a281c4d88628f626baf897791f0955b4
 EBUILD rawdog-2.6.ebuild 1013 RMD160 944fc4ec0a3d8e4f1eca8c59d3c949457cfb3e90 SHA1 95aae44cb029d0f26f36cf5656c706910d641dec SHA256 3ad96af73b171da1378aca2ec7a0d66c6f6264c8fc34a213e6893957996122f2
-MISC ChangeLog 3070 RMD160 a472af4307340318be93c2cd15ce4eca7fcff0f6 SHA1 53449ade557e80c0f41a971ef35f361a348430ce SHA256 feaf1372e177c10d6bfd95006861d3a3089c8d2956fec1b84e9120d31ab7b2a6
+MISC ChangeLog 3297 RMD160 ee9d15bce14d13c1b385c6cf663b02eff83b67f2 SHA1 9f694ebb7097171d6b1a21495a99b3bd5833076c SHA256 11d70f8594b69471697d71a900400653dbfc5a5c1c6510446dcbb5e54649b08e
 MISC metadata.xml 584 RMD160 e939dcc09666f7089f788fa2aa58eadfd9719e73 SHA1 66fb710892d38e0e19d90df8c5e371052a482656 SHA256 5e205dc57e57de94ffc59ded6cc4791fa360cb5dd8440016b522326d84031410
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkgp41gACgkQQU4yORhF8iBJ2gCgiMGhILkS7gt5TuL6Kpv7bi8e
-1ekAmwdiigRS2UIpok4G3QfYy1lkS0TF
-=uJq0
+iEYEARECAAYFAkgp8gIACgkQQU4yORhF8iCyqwCfT1sPHk3OCG9lNyds++mMjZFl
+i3gAoIL0ZakrWTWcF6gyEN07eLpyvIxI
+=cZQw
 -----END PGP SIGNATURE-----
