@@ -1,9 +1,9 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/rawdog/Attic/rawdog-2.11.ebuild,v 1.1 2008/05/13 18:52:04 hawking Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/rawdog/Attic/rawdog-2.11.ebuild,v 1.2 2008/05/13 19:54:38 hawking Exp $
 
 NEED_PYTHON=2.2
-inherit distutils eutils
+inherit distutils
 
 DESCRIPTION="Rawdog - RSS Aggregator Without Delusions Of Grandeur"
 HOMEPAGE="http://offog.org/code/rawdog.html"
@@ -11,20 +11,11 @@ SRC_URI="http://offog.org/files/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~s390 ~sparc ~x86"
 IUSE=""
 
 DEPEND=""
-RDEPEND="dev-python/feedparser"
+RDEPEND=""
 
 DOCS="NEWS PLUGINS config style.css"
 PYTHON_MODNAME="rawdoglib"
-
-src_unpack() {
-	distutils_src_unpack
-
-	# Use system feedparser.
-	epatch "${FILESDIR}"/${P}-system-feedparser.patch
-	rm rawdoglib/feedparser.py || die "failed to remove feedparser.py"
-}
-
