@@ -1,6 +1,11 @@
 # ChangeLog for net-news/rawdog
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/rawdog/ChangeLog,v 1.21 2008/05/13 18:52:04 hawking Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/rawdog/ChangeLog,v 1.22 2008/05/13 19:54:38 hawking Exp $
+
+  13 May 2008; Ali Polatel <hawking@gentoo.org> rawdog-2.11.ebuild:
+  The feedparser rawdog uses has many tweaks and therefore system feedparser
+  can't be used. Removed feedparser DEPEND and readded hppa and s390
+  KEYWORDS.
 
 *rawdog-2.11 (13 May 2008)
 
